@@ -5,6 +5,8 @@
     more cleanly.  See RDoc::Markup for details.
   * Document-class for RDoc::Parser::C now supports Foo::CONST as well as
     CONST.
+  * ri method output is now a comma-separated list when displayed
+    interactively.  Pull Request #39 by Benoit Daloze.
 * Bug fixes
   * RDoc::Parser::C no longer creates classes when processing aliases.
   * ri no longer crashes when attempting to complete a plain [.
